--- a/newdemo/login.html
+++ b/newdemo/login.html
@@ -90,7 +90,7 @@
     </div>
   </div>
 
-  <!-- MAP MODAL -->
+  <!-- MAP BOX -->
   <div id="mapModal" class="hidden">
     <div id="mapBox">
       <div id="map"></div>
